Header fix - stretched to fit whole screen

--- a/public/style.css
+++ b/public/style.css
@@ -2,7 +2,9 @@
 {
     color: white;
     margin: 0 auto;
-    width: 100%;
+    width: 101%;
+    margin: -8px 0px 0px -8px;
+    padding-right: 16px;
     height: 150px;
     padding-top: 50px;
     background-color: rgb(180, 54, 54);
@@ -10,7 +12,6 @@
     font-weight: 500;
     font-size: 75px;
     text-align: center;
-
 }
 
 .message
@@ -25,6 +26,7 @@
     padding-left: 10px;
     padding-bottom: 20px; 
     padding-top: 20px;
+    margin: 0px -8px 0px -8px;
 }
 
 a 
